# Pyroguard

./: .gitignore  FIRE_MANAGEMENT_README.md  LICENSE  README.md  README_LAUNCH.md  add_fires_to_turtlebot_world.py  calc_tree_positions.py  dqn_model.pth  fire_2d.sdf  fire_manager.py  fire_utils.py  fix_fires.py  fix_forest_world.py  package.xml  remove_fire_effects.py  run_all_nodes_normal.sh  setup.cfg  setup.py  test_forest_world.py
fire_manager/: fire_positions.txt  fix_fires.py  remove_fire_effects.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pyroguard/lib/pyroguard/: dqn_agent_node  fire_segmentation_node  fire_suppression_handler_node  image_preprocessor_node  lidar_vla_processor_node  reward_publisher_node
install/pyroguard/share/pyroguard/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: dqn_agent.launch.py  turtlebot4_forest_world.launch.py  turtlebot4_forest_world.launch.py.backup  turtlebot4_forest_world_clean.launch.py.backup
log/: latest_build
models/: dqn_model_20250802_220934_final.pth  dqn_model_20250802_225608_final.pth
pyroguard/: custom_spawner.py
src/pyroguard/: Flame Segmentation.ipynb  dqn_agent.py  dqn_agent_node.py  fire_node.py  fire_segmentation.py  fire_suppression_handler.py  image_preprocessor.py  lidar_vla_processor.py  map_coverage_node.py  reward_publisher.py  train.py
tree_manager/: tree.py  tree_positions.py  tree_positions.txt
worlds/: forest.sdf  forest_fixed.sdf
worlds/textures/: GrassTerrain.dae  grass_plane.dae
(+2 files in other folders)
