<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pyroguard</name>
  <version>0.1.0</version>
  <description>Firefighting DQN for TurtleBot 4</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>robot_state_publisher</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot4_description</depend>
  <depend>turtlebot4_ignition_bringup</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>